# VisionLineBot

./: .gitignore  LICENSE  README.md  setup.sh
controls/: setup.py
controls/controls/: l298n.py  ultrasonic.py
notebooks/: clustering.ipynb  hough.ipynb
src/controls/: package.xml
src/controls/controls/: l298n.py  ultrasonic.py
vision/: CMakeLists.txt  package.xml  setup.py
vision/include/: hough.hpp
vision/src/: hough.cpp  linedetection.cpp
vision/vision/: camera.py  hough.py  image_tools.py  pid_control.py
vision_rpi/: package.xml  setup.py
vision_rpi/vision_rpi/: publisher.py
